# automation-service

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTOMATED_REVIEWS.md  CODE_REVIEW.md  CR.md  DEBUGGING_GUIDE.md  DEPENDENCIES.md  DOCKER_DEPLOYMENT.md  Dockerfile  E2E_DIFF_TEST.md  E2E_TEST.md  E2E_TEST_SUMMARY.md  JULES_API_INTEGRATION.md  PR_WEBHOOK_DIAGNOSIS.md  RATE_LIMITER_IMPLEMENTATION.md  README.md  SETUP.md  TESTING.md  TESTING_NOTES.md  TEST_GEMINI_REVIEW.md  TEST_LOGGING.md  architecture_preview.html  bandit_report.txt  bot_executor.py  check_detailed_error.py  check_e2e.py  check_error_handling_pr.py  check_github_pr.py  check_pr_diff.py  check_run.py  check_server.py  coverage.xml  coverage_report.txt  coverage_report_2.txt  coverage_report_3.txt  create_pr.py  debug_empty_diff.py  debug_error.py  (+38 more)
assets/: CAPTURE_GUIDE.md
dashboard/: App.tsx  DASHBOARD_SETUP.md  Dockerfile  README.md  constants.ts  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts  vite.config.ts
docs/: CURRENT_STATUS.md  E2E_MONITORING_GUIDE.md  E2E_TEST.md  INVESTIGATION_SUMMARY.md  JULES_404_RESOLUTION.md  MCP_AUDITOR_INTEGRATION.md  QUICK_START_AUDITOR.md  SILENT_FAILURES_FIXED.md  TEST_FINAL.md  architecture_preview.html
reports/: audit_20260112_134434.md  audit_20260112_134652.md  audit_20260112_134844.md  audit_20260112_135339.md  audit_automation-service_20260112_132942.md
scripts/: debug_acontext_connection.py  dev_start.py  e2e_local_push.py  monitor_automation.py  seed_acontext.py  verify_acontext.py
src/: coverage_analyzer.py  (+1 more)
(+67 files in other folders)
